@@ -621,6 +621,10 @@ class tx_directmail_dmail extends t3lib_SCbase {
 	function mailModule_main()	{
 		global $LANG, $TYPO3_DB;
 
+		if ($this->CMD == 'delete') {
+			$this->deleteDMail(t3lib_div::_GP('uid'));
+		}
+		
 		if(intval($this->sys_dmail_uid)){
 			$row = t3lib_BEfunc::getRecord('sys_dmail',intval($this->sys_dmail_uid));
 			if($row){
@@ -1644,7 +1648,8 @@ class tx_directmail_dmail extends t3lib_SCbase {
 			$LANG->getLL('nl_l_sent'),
 			$LANG->getLL('nl_l_size'),
 			$LANG->getLL('nl_l_attach'),
-			$LANG->getLL('nl_l_type')
+			$LANG->getLL('nl_l_type'),
+			''
 		);
 		while($row = $TYPO3_DB->sql_fetch_assoc($res)){
 			$tblLines[] = array(
@@ -1654,7 +1659,8 @@ class tx_directmail_dmail extends t3lib_SCbase {
 				($row['issent'] ? $LANG->getLL('dmail_yes') : $LANG->getLL('dmail_no')),
 				($row['renderedsize'] ? t3lib_div::formatSize($row['renderedsize']) : ''),
 				($row['attachment'] ? '<img '.t3lib_iconWorks::skinImg($BACK_PATH, t3lib_extMgm::extRelPath($this->extKey).'res/gfx/attach.gif', 'width="9" height="13"').' alt="'.htmlspecialchars($LANG->getLL('nl_l_attach')).'" title="'.htmlspecialchars($row['attachment']).'" width="9" height="13">' : ''),
-				($row['type'] ? $LANG->getLL('nl_l_tUrl') : $LANG->getLL('nl_l_tPage'))
+				($row['type'] ? $LANG->getLL('nl_l_tUrl') : $LANG->getLL('nl_l_tPage')),
+				$this->deleteLink($row['uid'])
 			);
 		}
 
@@ -1667,7 +1673,7 @@ class tx_directmail_dmail extends t3lib_SCbase {
 		$output.= '<a href="#" onclick="toggleDisplay(\''.$boxID.'\', event, '.$totalBox.')"><img id="'.$boxID.'_toggle" '.$imgSrc.' alt="" >'.$LANG->getLL('dmail_wiz1_list_dmail').'</a>';
 		$output.= '</div><div id="'.$boxID.'" class="toggleBox" style="display:'. ($open?'block':'none') .'">';
 		$output.= '<h3>'.$LANG->getLL('dmail_wiz1_list_header').'</h3>';
-		$output.= tx_directmail_static::formatTable($tblLines,array(),1,array(1,1,1,0,0,1,0),'border="0" cellspacing="0" cellpadding="3"');
+		$output.= tx_directmail_static::formatTable($tblLines,array(),1,array(1,1,1,0,0,1,0,1),'border="0" cellspacing="0" cellpadding="3"');
 		$output.= '</div></div>';
 		return $output;
 	}
@@ -1740,13 +1746,16 @@ class tx_directmail_dmail extends t3lib_SCbase {
 					break;
 				}
 				
+				$createDmailLink = 'index.php?id='.$this->id.'&createMailFrom_UID='.$row['uid'].'&fetchAtOnce=1&CMD=info'; 
+				
 				$outLines[] = array(
-					'<a href="index.php?id='.$this->id.'&createMailFrom_UID='.$row['uid'].'&fetchAtOnce=1&CMD=info">'.t3lib_iconWorks::getIconImage('pages', $row, $BACK_PATH, ' title="'.htmlspecialchars(t3lib_BEfunc::getRecordPath ($row['uid'],$this->perms_clause,20)).'" style="vertical-align: top;"').$row['title'].'</a>',
-					'<a href="#" onClick="'.t3lib_BEfunc::editOnClick('&edit[pages]['.$row['uid'].']=edit&edit_content=1',$BACK_PATH,"",1).'"><img'.t3lib_iconWorks::skinImg($BACK_PATH, 'gfx/edit2.gif', 'width="12" height="12"').' alt="'.$LANG->getLL("dmail_edit").'" style="vertical-align:top;" title="'.$LANG->getLL("nl_editPage").'" /></a>',
+					'<a href="'.$createDmailLink.'">'.t3lib_iconWorks::getIconImage('pages', $row, $BACK_PATH, ' title="'.htmlspecialchars(t3lib_BEfunc::getRecordPath ($row['uid'],$this->perms_clause,20)).'" style="vertical-align: top;"').$row['title'].'</a>',
+					'<a href="'.$createDmailLink.'"><img'.t3lib_iconWorks::skinImg($BACK_PATH, 'gfx/newmail', 'width="16" height="18"').' alt="'.$LANG->getLL("dmail_createMail").'" style="vertical-align:top;" title="'.$LANG->getLL("nl_create").'" /></a>',
+					'<a href="/typo3/'.t3lib_extMgm::extRelPath('cms').'layout/db_layout.php?id='.$row['uid'].'" target="_blank"><img'.t3lib_iconWorks::skinImg($BACK_PATH, 'gfx/edit2.gif', 'width="12" height="12"').' alt="'.$LANG->getLL("dmail_edit").'" style="vertical-align:top;" title="'.$LANG->getLL("nl_editPage").'" /></a>',
 					$iconPreview
 					);
 			}
-			$out = tx_directmail_static::formatTable($outLines, array(), 0, array(1,1,1));
+			$out = tx_directmail_static::formatTable($outLines, array(), 0, array(1,1,1,1));
 			$theOutput.= $this->doc->section($LANG->getLL('dmail_dovsk_crFromNL').t3lib_BEfunc::cshItem($this->cshTable,'select_newsletter',$BACK_PATH), $out, 1, 1, 0, TRUE);
 		}
 			// Create a new page
@@ -1997,6 +2006,41 @@ class tx_directmail_dmail extends t3lib_SCbase {
 		$theOutput.= $this->doc->section($LANG->getLL('dmail_view').' '.$dmailTitle, $out, 1, 1, 0, TRUE);
 
 		return $theOutput;
+	}
+	
+	/**
+	 * create delete link with trash icon
+	 * 
+	 * @param	int		$uid: uid of the record
+	 * @return	string	link with the trash icon
+	 */
+	function deleteLink($uid) {
+		global $BACK_PATH;
+		
+		$icon = '<img'.t3lib_iconWorks::skinImg($BACK_PATH, 'gfx/delete_record.gif').' />';
+		$dmail = t3lib_BEfunc::getRecord('sys_dmail', $uid); 
+		if (!$dmail['scheduled_begin']) {
+			return '<a href="index.php?id='.$this->id.'&CMD=delete&uid='.$uid.'">'.$icon.'</a>';
+		}
+	}
+	
+	/**
+	 * delete existing dmail record
+	 * 
+	 * @param int $uid: record uid to be deleted
+	 * @return void
+	 */
+	function deleteDMail($uid) {
+		$table = 'sys_dmail';
+		if ($GLOBALS['TCA'][$table]['ctrl']['delete']) {
+			$GLOBALS['TYPO3_DB']->exec_UPDATEquery(
+				$table,
+				'uid = '.$uid,
+				array($GLOBALS['TCA'][$table]['ctrl']['delete'] => 1)
+			);
+		}
+		
+		return;
 	}
 }
 
